# wechat-sdk-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README.zh_cn.md
examples/: hello.rs
src/: lib.rs
src/account/: auth.rs  mod.rs  qr_code_api.rs
src/client/: config.rs  lifecycle.rs  mod.rs  session_context.rs
src/client/apis/: cdn.rs  get_config.rs  get_updates.rs  message.rs  mod.rs  send_message.rs  send_typing.rs
