[package]
name = "wechat-sdk-rs"
version = "0.1.0"
edition = "2024"

description = "Wechat SDK for Rust"
license = "MIT"
authors = ["wenhaozhao"]
repository = "https://github.com/wenhaozhao/wechat-sdk-rs"

[lib]
name="wechat_sdk"
path = "src/lib.rs"

[dev-dependencies]
env_logger = { version = "0.11" }

[dependencies]
log = { version = "0.4" }
anyhow = { version = "1.0" }
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "multipart", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.5" }
async-trait = "0.1"
chrono = { version = "0.4" }
md5 = { version = "0.8" }
image = { version = "0.25", optional = true }


[features]
defaults = []
