[package]
name = "wechat-sdk-rs"
version = "0.1.3"
edition = "2024"

description = "Wechat SDK for Rust"
license = "MIT"
authors = ["wenhaozhao"]
repository = "https://github.com/wenhaozhao/wechat-sdk-rs"

[lib]
name = "wechat_sdk"
path = "src/lib.rs"

[dev-dependencies]
env_logger = { version = "0.11" }

[dependencies]
log = { version = "0.4" }
anyhow = { version = "1.0" }
tokio = { version = "1.51", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls", "multipart", "stream", "query"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1" }
base64 = "0.22"
dirs = "6.0"
derive_more = { version = "2.1", features = ["from", "from_str", "display", "deref", "deref_mut", "into_iterator", "into", "try_from", "try_into"] }
uuid = { version = "1.23", features = ["v4"] }
[features]
default = []
